# BowlingKata

./: BowlingGame.cpp  BowlingGame.h  CMakeLists.txt  README.md  main.cpp  testmain.cpp
test/: BowlingGameTest.cpp
